--- a/assignment5.css
+++ b/assignment5.css
@@ -79,6 +79,6 @@ nav li {
     color: #ffffff;
     display: block;
     padding: 10px;
-    background-color: blue;
+    background-color: darkblue;
     text-decoration: none;
   }
