--- a/Blank1200px.css
+++ b/Blank1200px.css
@@ -80,6 +80,9 @@ aside {
   border-bottom-left-radius: 40px;
   border-bottom-right-radius: 40px;
   border: solid 3px white;
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .photograph {
@@ -101,6 +104,9 @@ main {
 #emphasis {
   color: red;
   padding: 0px;
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 footer {
@@ -109,3 +115,10 @@ footer {
   background-color: red;
   padding: 10px;
 }
+
+main p {
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
