--- a/finalportfolio.css
+++ b/finalportfolio.css
@@ -155,6 +155,7 @@ footer a:visited {
 
 #myCarousel {
   margin-bottom: 24px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #myCarousel .f-carousel__slide {
@@ -193,4 +194,20 @@ footer a:visited {
   grid-column: span 4;
   border: solid 3px white;
   padding: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#secondCarousel {
+  margin-bottom: 24px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#secondCarousel .f-carousel__slide {
+  padding: 24px;
+  background: black;
+  text-align: center;
+}
+
+#secondCarousel img {
+  border-radius: 20px;
 }
